Navigate through books

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -9,6 +10,7 @@
    <div class="arrow bottom"><img src="img/arrow_bottom.jpg"/></div>
    <div class="arrow left"><img src="img/arrow_left.jpg"/></div>
    <div class="arrow right"><img src="img/arrow_right.jpg"/></div>
-   <scripti src="js/main.js"></script>
+   <script  src="js/jquery-3.1.1.min.js"></script>
+   <script src="js/main.js"></script>
 </body>
 </html>
