--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+   <span class="infobox"></span>
    <img class="main-image" src="http://localhost:8080/img/1072068122/1072068122_048.jpg"/>
    <div class="arrow top"><img src="img/arrow_top.jpg"/></div>
    <div class="arrow bottom"><img src="img/arrow_bottom.jpg"/></div>
