--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
    <span class="infobox"></span>
    <img class="main-image" src="http://localhost:8080/img/1072068122/1072068122_048.jpg"/>
-   <div class="arrow top"><img src="img/arrow_top.jpg"/></div>
-   <div class="arrow bottom"><img src="img/arrow_bottom.jpg"/></div>
-   <div class="arrow left"><img src="img/arrow_left.jpg"/></div>
-   <div class="arrow right"><img src="img/arrow_right.jpg"/></div>
+   <div class="arrow top"><img src="img/arrow-top.png"/></div>
+   <div class="arrow bottom"><img src="img/arrow-bottom.png"/></div>
+   <div class="arrow left"><img src="img/arrow-left.png"/></div>
+   <div class="arrow right"><img src="img/arrow-right.png"/></div>
    <script  src="js/jquery-3.1.1.min.js"></script>
    <script src="js/main.js"></script>
 </body>
