Use a first imge with basic auth

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <span class="infobox"></span>
-   <img class="main-image" src="https://bodmer.dlcm.ch/img/1072055693/1072055693_186.jpg"/>
+   <img class="main-image" src="https://changeit:changeit@bodmer.dlcm.ch/img/1072055693/1072055693_186_small.jpg"/>
    <div class="arrow top"><img src="img/arrow-top.png"/></div>
    <div class="arrow bottom"><img src="img/arrow-bottom.png"/></div>
    <div class="arrow left"><img src="img/arrow-left.png"/></div>
